Handle management and a test for devices

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,3 +4,6 @@ include_directories(../include)
 
 add_executable(repository src/repository.cpp)
 target_link_libraries(repository qtpndman)
+
+add_executable(device src/device.cpp)
+target_link_libraries(device qtpndman)
