Make syncing asynchronous using QTimer, modify tests to act like actual Qt applications

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,8 +2,11 @@ cmake_minimum_required(VERSION 2.6)
 
 include_directories(../include)
 
-add_executable(repository src/repository.cpp)
+file (GLOB_RECURSE TEST_HEADERS src/*.h)
+QT4_WRAP_CPP(TEST_SRC_MOC ${TEST_HEADERS})
+
+add_executable(repository src/repository.cpp src/moc_repository.cxx)
 target_link_libraries(repository qtpndman)
 
-add_executable(device src/device.cpp)
+add_executable(device src/device.cpp src/moc_device.cxx)
 target_link_libraries(device qtpndman)
