--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ find_package(Qt4 REQUIRED)
 include(${QT_USE_FILE})
 add_definitions(${QT_DEFINITIONS})
 
+set(CMAKE_CXX_FLAGS "-g -Wall")
+#set(CMAKE_CXX_FLAGS "-Wall")
+
 file (GLOB_RECURSE HEADERS src/*.h)
 QT4_WRAP_CPP(SRC_MOC ${HEADERS})
 
