--- a/lib/libpndman/CMakeLists.txt
+++ b/lib/libpndman/CMakeLists.txt
@@ -7,4 +7,4 @@ include_directories(${JANSSON_BINARY_DIR}/include/)
 set(CMAKE_CXX_FLAGS "-g -Wall")
 file (GLOB_RECURSE PNDMAN_SRCS src/lib/*.c)
 add_library(pndman ${PNDMAN_SRCS})
-target_link_libraries(pndman curl ssl jansson crypto)
+target_link_libraries(pndman curl ssl jansson crypto expat)
