Context and force awareness to handle, fixed handle not initialiing pndman_handle correctly, added download test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,3 +13,6 @@ target_link_libraries(devicetest qtpndman)
 
 add_executable(packageinfotest src/packageinfotest.cpp src/moc_packageinfotest.cxx)
 target_link_libraries(packageinfotest qtpndman)
+
+add_executable(downloadtest src/downloadtest.cpp)
+target_link_libraries(downloadtest qtpndman)
