--- a/lib/libpndman/CMakeLists.txt
+++ b/lib/libpndman/CMakeLists.txt
@@ -4,7 +4,7 @@ find_package(CURL REQUIRED)
 find_package(OpenSSL REQUIRED)
 
 include_directories(${JANSSON_BINARY_DIR}/include/)
-set(CMAKE_CXX_FLAGS "-g -Wall")
+set(CMAKE_C_FLAGS "-g -Wall")
 file (GLOB_RECURSE PNDMAN_SRCS src/lib/*.c)
 add_library(pndman ${PNDMAN_SRCS})
 target_link_libraries(pndman curl ssl jansson crypto expat)
