Added support for finding upgrades

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,3 +13,6 @@ target_link_libraries(packageinfotest qtpndman)
 
 add_executable(downloadtest src/downloadtest.cpp)
 target_link_libraries(downloadtest qtpndman)
+
+add_executable(upgradetest src/upgradetest.cpp)
+target_link_libraries(upgradetest qtpndman)
