Added test for removing packages

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,3 +16,6 @@ target_link_libraries(downloadtest qtpndman)
 
 add_executable(upgradetest src/upgradetest.cpp)
 target_link_libraries(upgradetest qtpndman)
+
+add_executable(removetest src/removetest.cpp)
+target_link_libraries(removetest qtpndman)
