--- a/lib/libpndman/CMakeLists.txt
+++ b/lib/libpndman/CMakeLists.txt
@@ -4,7 +4,9 @@ find_package(CURL REQUIRED)
 find_package(OpenSSL REQUIRED)
 
 include_directories(${JANSSON_BINARY_DIR}/include/)
+
 set(CMAKE_C_FLAGS "-g -Wall")
 file (GLOB_RECURSE PNDMAN_SRCS src/lib/*.c)
-add_library(pndman ${PNDMAN_SRCS})
+file (GLOB_RECURSE PNDMAN_HEADERS src/include/*.h)
+add_library(pndman ${PNDMAN_SRCS} ${PNDMAN_HEADERS})
 target_link_libraries(pndman curl ssl jansson crypto expat)
