Added mutexes to handle operations

--- a/lib/libpndman/CMakeLists.txt
+++ b/lib/libpndman/CMakeLists.txt
@@ -5,7 +5,7 @@ find_package(OpenSSL REQUIRED)
 
 include_directories(${JANSSON_BINARY_DIR}/include/)
 
-set(CMAKE_C_FLAGS "-g -Wall")
+set(CMAKE_C_FLAGS_DEBUG "-g -Wall")
 file (GLOB_RECURSE PNDMAN_SRCS src/lib/*.c)
 file (GLOB_RECURSE PNDMAN_HEADERS src/include/*.h)
 add_library(pndman ${PNDMAN_SRCS} ${PNDMAN_HEADERS})
