Added download history fetching and a test for it

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -34,3 +34,6 @@ target_link_libraries(commentaddtest qtpndman)
 
 add_executable(ratingtest src/ratingtest.cpp)
 target_link_libraries(ratingtest qtpndman)
+
+add_executable(downloadhistorytest src/downloadhistorytest.cpp)
+target_link_libraries(downloadhistorytest qtpndman)
