--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(Qt4 REQUIRED)
 
 include(${QT_USE_FILE})
 add_definitions(${QT_DEFINITIONS})
+ADD_DEFINITIONS(-fPIC)
 
 set(CMAKE_CXX_FLAGS "-g -Wall")
 #set(CMAKE_CXX_FLAGS "-Wall")
