EXCLUDE_FROM_ALL to preven libpndman make install

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -2,7 +2,7 @@ if (NOT PNDMAN_LIBRARY)
     message("Building libpndman with qtpndman")
     SET(LIBPNDMAN_BUILD_STATIC ON CACHE STRING "Build libpndman as static library")
     SET(LIBPNDMAN_BUILD_MILKYHELPER OFF CACHE STRING "Build libpndman without milkyhelper")
-    ADD_SUBDIRECTORY(libpndman)
+    ADD_SUBDIRECTORY(libpndman EXCLUDE_FROM_ALL)
     list(APPEND QTPNDMAN_INCL ${libpndman_SOURCE_DIR}/include)
     list(APPEND QTPNDMAN_LINK pndman)
 endif ()
